Fix alignment between content and sidebar

--- a/public/style.css
+++ b/public/style.css
@@ -201,7 +201,7 @@ section .content *:first-child {
 }
 @media print, screen and (min-width: 720px) {
     section .content.first-entry {
-        margin-top: 24px;
+        margin-top: 22px;
     }
 }
 section .content p {
